--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "jade": "~1.6.0",
-    "stylus": "0.42.3"
+    "stylus": "0.42.3",
+    "express-session": "1.10.1",
+    "moment": "2.9.0",
+    "mongoose": "3.8.21",
+    "crypto": "0.0.3"
   }
 }
