--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "1.10.1",
     "moment": "2.9.0",
     "mongoose": "3.8.21",
-    "crypto": "0.0.3"
+    "crypto": "0.0.3",
+    "express-minify": "~0.1.2"
   }
 }
